Fixed issues with the size of text content in the jumbotron on mobile devices

--- a/assets/css/app/services.scss
+++ b/assets/css/app/services.scss
@@ -125,6 +125,11 @@ span.bold {
     font-size: 40px;
     top: -55px;
     position: relative;
+    margin-top: 20px;
+    @media(max-width: $screen-sm-min){
+        font-size: 24px;
+        width: 100%;
+    }
 }
 .big-triangle:after, .big-triangle:before {
     border-bottom-color: #f3f3f3;
